# diplom_10

./: README.md  pyproject.toml
todolist/: settings.py
