[tool.poetry]
name = "diplom-10"
version = "0.1.0"
description = ""
authors = ["Gysborn <forparty@gmail.com>"]
readme = "README.md"
packages = [{include = "diplom_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
